Sat Jul 25 01:05:59 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/big5.c: Fix EncLen_BIG5 for Big5-HKSCS. see [ruby-core:24390]

Fri Jul 24 19:19:19 2009  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/trans/big5.trans, big5-hkscs-tbl.rb:
	  new Chinese BIG5-HKSCS transcoding (with Tatsuya Mizuno)
	  see [ruby-core:24390]

	* test/ruby/test_transcode.rb: added tests for the above
	  (with Tatsuya Mizuno)

	* enc/big5.c: Added BIG5-HKSCS as a replicate encoding of BIG5
	  (short term solution, needs more work; with Tatsuya Mizuno)

	* tool/transcode-tblgen.rb: made 'pat' directly accessible in
	  class StrSet

Fri Jul 24 18:03:01 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (idle): leaves IDLE in a ensure clause.  a patch
	  from Eric Hodel.

	* test/net/imap/test_imap.rb (setup, teardown): turn on
	  Socket.do_not_reverse_lookup in tests.

Fri Jul 24 00:13:41 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (resp_text_code): accepts response codes without
	  text.  [ruby-core:24194]

	* lib/net/imap.rb (idle, idle_done): new methods for the IMAP4 IDLE
	  command (RFC 2177).  Thanks, Eric Hodel.

	* lib/net/imap.rb (format_date, format_datetime): new method to
	  format IMAP-style date/datetime. Thanks, Eric Hodel.

Thu Jul 23 17:31:02 2009  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/irb/ruby-lex.rb: make irb be able to parse
	  string_dvar. [ruby-core: 24051]

Thu Jul 23 17:26:51 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: should not create "config_list" in a $srcdir.

Thu Jul 23 14:35:02 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_{open,wopen}): fixed typos. these conditions
	  mean to call runtime's open() if textmode.

Thu Jul 23 08:53:24 2009  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/markup/simple_markup/: Remove useless directory.
	  [Bug #1343]

Thu Jul 23 08:52:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_{state,left}): internal/debug use.
