@@ -35,6 +35,10 @@ class Rational_Test < Test::Unit::TestCase
       assert_equal(c, c5)
       assert_instance_of(RationalSub, c5)
     end
+
+    c1 = Rational(1)
+    assert_equal(c1.hash, c.hash, '[ruby-dev:38850]')
+    assert_equal([true, true], [c.eql?(c1), c1.eql?(c)])
   end
 
   def test_eql_p
